Atualiza o portfólio de MResgate, alterando o nome, imagem do logo e links de navegação. Remove ícones de redes sociais e ajusta estilos de CSS para a seção "Sobre" e a barra de navegação.

--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- title -->
-    <title>MResgate Portfólio</title>
+    <title>Sobre - MResgate Portfólio</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/extends.css" />
     <!-- Fonts -->
@@ -44,25 +44,48 @@
       </div>
     </nav>
 
-    <!-- header -->
-    <header id="header" class="max-width">
-      <div class="header__left">
-        <h1>Olá! Sou Miguel Resgate Desenvolvedor Front-End</h1>
+    <!-- Sobre -->
+    <section id="about" class="about max-width">
+      <div class="about__left">
+        <h2 class="secondary-title">Além do código: quem sou eu?</h2>
         <p>
-          Desenvolvedor Frontend apaixonado por criar aplicações web bonitas, responsivas e fáceis de usar.
-          Sou apaixonado por criar
-          soluções para o Front-End que ajudam a resolver problemas reais e que agregam valor
-          aos usuários.
+          Que tal se conectar comigo nas redes sociais abaixo e saber mais sobre
+          meu trabalho?
         </p>
-        <a href="sobre.html" class="btn btn-primary">Saiba Mais!</a>
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/miguel-resgate-a9504817b/"><img src="assets/logotipo-do-linkedin.png" alt="Linkedin" /></a>
+          </li>
+          <li>
+            <a href="https://github.com/mresgate"><img src="assets/github.png" alt="GitHub" /></a>
+          </li>
+         </ul>
       </div>
-      <div class="header__right">
-        <div class="header__image">
-          <img src="assets/lucas-silva.png" alt="Lucas Silva" class="lucas" />
-          <img src="assets/abstract.svg" alt="background" class="background" />
-        </div>
+      <div class="about__right">
+        <h3 class="tertiary-title mb-m">
+          Desenvolvedor Front-End apaixonado por tecnologia e soluções criativas
+        </h3>
+        <p>
+            O meu nome é Miguel Resgate e sou Desenvolvedor de Software na Acioli Consultoria. Iniciei a minha jornada na programação em dezembro de 2024, com foco em desenvolvimento Front-End para projetos inovadores, especialmente na área de Inteligência Artificial.
+        </p>
+        <p>
+          Eu amo o desafio de encontrar soluções inovadoras e criativas para
+          problemas complexos e estou sempre buscando aprender e crescer como
+          profissional.
+        </p>
+        <p>
+            Tenho como objetivo criar interfaces modernas, acessíveis e eficientes, proporcionando a melhor experiência possível aos utilizadores. Acredito na importância da aprendizagem contínua e na aplicação de boas práticas de desenvolvimento.
+        </p>
+        <p>
+          Acredito que a tecnologia deve ser acessível e útil para todos, e é
+          por isso que me esforço para criar soluções que não apenas funcionem
+          bem, mas que também proporcionem uma excelente experiência ao usuário.
+        </p>
+        <p>Estou sempre disponível para novos desafios e oportunidades de colaboração em projetos que promovam a tecnologia e a inovação.
+        </p>
       </div>
-    </header>
+    </section>
+
     <!-- Footer -->
     <footer id="footer">
       <div class="footer__content max-width mb-0">
@@ -94,4 +117,4 @@
     <!-- script -->
     <script src="scripts/index.js"></script>
   </body>
-</html>
+</html> 
