--- a/contato.html
+++ b/contato.html
@@ -103,26 +103,11 @@
 
         <div class="contact__form">
           <h3 class="tertiary-title mb-s">Envie uma mensagem</h3>
-          <form class="form">
-            <div class="form__group">
-              <label for="name" class="form__label">Nome</label>
-              <input type="text" id="name" name="name" class="form__input" required>
-            </div>
-            <div class="form__group">
-              <label for="email" class="form__label">Email</label>
-              <input type="email" id="email" name="email" class="form__input" required>
-            </div>
-            <div class="form__group">
-              <label for="subject" class="form__label">Assunto</label>
-              <input type="text" id="subject" name="subject" class="form__input" required>
-            </div>
-            <div class="form__group">
-              <label for="message" class="form__label">Mensagem</label>
-              <textarea id="message" name="message" class="form__textarea" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+          <form action="https://formsubmit.co/m.resgate@gmail.com" method="POST">
+            <input type="text" name="name" required placeholder="Nome">
+            <input type="email" name="email" required placeholder="Email">
+            <button type="submit">Send</button>
           </form>
-          <div id="success-message" style="display:none; color: #2e7d32; font-weight: bold; margin-top: 1rem;">Mensagem enviada com sucesso!</div>
         </div>
       </div>
     </section>
