--- a/contato.html
+++ b/contato.html
@@ -103,10 +103,20 @@
 
         <div class="contact__form">
           <h3 class="tertiary-title mb-s">Envie uma mensagem</h3>
-          <form action="https://formsubmit.co/m.resgate@gmail.com" method="POST">
-            <input type="text" name="name" required placeholder="Nome">
-            <input type="email" name="email" required placeholder="Email">
-            <button type="submit">Send</button>
+          <form action="https://formsubmit.co/m.resgate@gmail.com" method="POST" class="form">
+            <div class="form__group">
+              <label for="name" class="form__label">Nome</label>
+              <input type="text" id="name" name="name" class="form__input" required placeholder="Digite seu nome">
+            </div>
+            <div class="form__group">
+              <label for="email" class="form__label">Email</label>
+              <input type="email" id="email" name="email" class="form__input" required placeholder="Digite seu email">
+            </div>
+            <div class="form__group">
+              <label for="message" class="form__label">Mensagem</label>
+              <textarea id="message" name="message" class="form__textarea" rows="5" required placeholder="Digite sua mensagem"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
           </form>
         </div>
       </div>
